--- a/policy.html
+++ b/policy.html
@@ -1,11 +1,14 @@
 <! Documents html>
 <head> 
 <h1> Privacy Policy </h1>
-<h4>1. Your Agreement with SKS VPN </h4>
-<p> Updates to Terms. Smart VPN shield may modify the Terms from time to time. The most recent version is the version that applies to your use of the Services. If the changes include material changes that affect your rights or obligations, we will notify you in advance of the changes by reasonable means, which could include notification through the client applications, website or via email. Unless it is stated by us otherwise, each update of the Terms comes into force as of the moment when amended Terms are published on this web page. You understand and agree that any continued use and access to the Services after any updates to these Terms are published, means that you voluntarily agree to be bound by the updated Terms.
-
-Privacy. For information about how we process information about you and your use of our Services, please see our Privacy Policy 
- </p>
-
  </head>
-<body> </body>
+<body>
+
+<div style="layout_padding : 20px; textColor : black; " > 
+<h4> 1. (User-Controlled Option): Personal Information </h4>
+<p>Our VPN APP is a non-obligatory log network. We are not available for the information related to the personal information of users, including but not limited to names (subscriber names, user names and screen names), addresses (including mailing addresses, residential address, business addresses) and telephones, unless the data you provide depending on the context of your interactions with us and the choices you make, including your privacy settings, and the products and features you use for the purpose of administering your subscription and for the purpose to enjoy our VPN services. Except for the limited exceptions, we don't automatically collect any Personal Information from you. </p>
+
+</div>
+
+
+</body>
