--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url('/w3images/parallax1.jpg');
+  background-image: url('https://i.ibb.co/dB1btvy/triangles-1430105-1280.png');
   min-height: 100%;
 }
 
