--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <nav class="navbar bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+      <img src="https://raw.githubusercontent.com/sansoe2022/sksvpn/main/20230309_200858.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
       Bootstrap
     </a>
   </div>
