--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
      <nav class="navbar bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="https://raw.githubusercontent.com/sansoe2022/sksvpn/main/20230309_200858.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-      Bootstrap
+      <img src="https://raw.githubusercontent.com/sansoe2022/sksvpn/main/20230309_200858.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-top">
+      SKS VPN
     </a>
   </div>
 </nav>
 
     <h1>Hello, world!</h1>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
   </body>
 </html>
