--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
      <nav class="navbar bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
-      <img src="https://raw.githubusercontent.com/sansoe2022/sksvpn/main/20230309_200858.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
+    <a class="navbar-brand" href="https://sksvpn.com">
       SKS VPN
     </a>
 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
