--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-     <nav class="navbar" style="background-color: #ff0000;">
+     <nav class="navbar" style="background-color: #388E3C;">
   <!-- Navbar content -->
 <div class="container-fluid">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
