--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </div>
 </nav>
 
-  <div class="card">
+  <div class="card"; style="layout_margin: 20px;" >
   <h5 class="card-header">DreamVPN</h5>
   <div class="card-body">
     <h5 class="card-title">VIP ဆာဗာ သီးသန့် သုံးလို့ရပါတယ်</h5>
@@ -44,7 +44,6 @@
   </div>
 </div>
 
-    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom" aria-controls="offcanvasBottom">Toggle bottom offcanvas</button>
 
 <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom" aria-labelledby="offcanvasBottomLabel">
   <div class="offcanvas-header">
