--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <p class="mb-0">VIP အကောင့် တစ်လ 50ဘတ်နဲ့ ဝယ်ယူအသုံးပြုနိုင်ပါတယ်။ </p>
 </div>
 
-<div style="layout_margin: 20px;" >
+<div style="margin: 1%;" >
   <div class="card">
   <h5 class="card-header">DreamVPN</h5>
   <div class="card-body">
