--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <p class="mb-0">VIP အကောင့် တစ်လ 50ဘတ်နဲ့ ဝယ်ယူအသုံးပြုနိုင်ပါတယ်။ </p>
 </div>
 
-<div style="margin: 1%;" >
+<div style="margin: 1%; margin-left: 20px" margin-right: 20px; >
 <img> src="https://raw.githubusercontent.com/sansoe2022/sksvpn/main/dreamvpn_ic.png" class="img-thumbnail" alt="dreamvpn" </img>
   <div class="card">
   <h5 class="card-header">DreamVPN</h5>
