--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </div>
 
 <div style="margin: 1%; margin-left: 20px" margin-right: 20px; >
-<img> src="https://raw.githubusercontent.com/sansoe2022/sksvpn/main/dreamvpn_ic.png" class="img-thumbnail" alt="dreamvpn" </img>
-  <div class="card">
+ <img src="https://raw.githubusercontent.com/sansoe2022/sksvpn/main/dreamvpn_ic.png" class="img-thumbnail" alt="...">
+ <div class="card">
   <h5 class="card-header">DreamVPN</h5>
   <div class="card-body">
     <h5 class="card-title">VIP ဆာဗာ သီးသန့် သုံးလို့ရပါတယ်</h5>
