--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </div>
 </div>
 
-<div style="margin-top: 0.5%; margin-left: 20px; margin-right: 20px;" >
+<div style="margin-top: 50px; margin-left: 20px; margin-right: 20px;" >
  <img style="width: 100px; height: 100px;" src="https://raw.githubusercontent.com/sansoe2022/sksvpn/main/dreamvpn_ic.png" class="img-thumbnail" alt="...">
  <div class="card">
   <h5 class="card-header">MaxVPN Pro</h5>
