--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
   <div class="card-body">
     <h5 class="card-title">VIP ဆာဗာ သီးသန့် သုံးလို့ရပါတယ်</h5>
     <p class="card-text">တစ်လ 50ဘတ် ဖြင့် အင်တာနက်ဖရီး သုံးနိုင်သော ဆော့ဝဲလ်ပါ</p>
-<p class="card-text">မြန်မာ ဘာသာနဲ့ အသုံးပြုရပါမယ်။</p>
+    <div class="alert alert-info" role="alert">
+  မြန်မာဘာသာနဲ့ အသုံးပြုရပါမယ်
+</div>
     <a href="#" class="btn btn-primary">Download apk</a>
   </div>
 </div>
@@ -35,7 +37,9 @@
   <div class="card-body">
     <h5 class="card-title">FREE ဖိုင် အနည်းငယ်ပါဝင်ပါတယ် VIPရော ဝယ်သုံးလို့ရပါတယ်။</h5>
     <p class="card-text">တစ်လ 50ဘတ် ဖြင့် အင်တာနက်ဖရီး သုံးနိုင်သော ဆော့ဝဲလ်ပါ</p>
-<p class="card-text">English ဘာသာနဲ့ အသုံးပြုရပါမယ်။</p>
+    <div class="alert alert-info" role="alert">
+    English ဘာသာနဲ့ အသုံးပြုရပါမယ်
+</div>
     <a href="#" class="btn btn-primary">Download apk</a>
   </div>
 </div>
