--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
  <div class="card">
   <h5 class="card-header">DreamVPN</h5>
   <div class="card-body">
-    <h5 class="card-title">VIP ဆာဗာ သီးသန့် သုံးလို့ရပါတယ်</h5>
-    <p class="card-text">တစ်လ 50ဘတ် ဖြင့် အင်တာနက်ဖရီး သုံးနိုင်သော ဆော့ဝဲလ်ပါ</p>
+    <h5 class="card-title">VIP ဆာဗာ သီးသန့်</h5>
+    <p class="card-text">တစ်လ 50ဘတ် ဖြင့် အင်တာနက်ဖရီး သုံးနိုင်သော ဆော့ဝဲလ်ပါ။ ဒေါင်းယူရန် အောက်က Download apkခလုတ်ကို နှိပ်ပါ။</p>
     <div class="alert alert-info" role="alert">
   မြန်မာဘာသာနဲ့ အသုံးပြုရပါမယ်
 </div>
@@ -35,8 +35,8 @@
  <div class="card">
   <h5 class="card-header">MaxVPN Pro</h5>
   <div class="card-body">
-    <h5 class="card-title">FREE ဖိုင် အနည်းငယ်ပါဝင်ပါတယ် VIPရော ဝယ်သုံးလို့ရပါတယ်။</h5>
-    <p class="card-text">တစ်လ 50ဘတ် ဖြင့် အင်တာနက်ဖရီး သုံးနိုင်သော ဆော့ဝဲလ်ပါ</p>
+    <h5 class="card-title">FREE ဖိုင်ရော VIPဖိုင်ရော ပါဝင်</h5>
+    <p class="card-text">တစ်လ 50ဘတ် ဖြင့် အင်တာနက်ဖရီး သုံးနိုင်သော ဆော့ဝဲလ်ပါ။ ဒေါင်းယူရန် အောက်က Download apk ခလုတ်ကို နှိပ်ပါ</p>
     <div class="alert alert-info" role="alert">
     English ဘာသာနဲ့ အသုံးပြုရပါမယ်
 </div>
