--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
   </head>
   <body>
-
+<div style="text-size: 12px;">
      <div class="alert alert-success" role="alert">
   <h4 class="alert-heading">ကြိုဆိုပါ၏ </h4>
   <p>မင်္ဂလာပါဗျာ အင်တာနက်ဖရီး သုံးဖို့အတွက် အောက်ပါ ကြိုက်ရာ Apk တစ်ခုအား ဒေါင်းယူပါ။ </p>
@@ -45,7 +45,7 @@
 </div>
 </div>
 
-
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
   </body>
