--- a/index.html
+++ b/index.html
@@ -25,7 +25,19 @@
     <div class="alert alert-info" role="alert">
   မြန်မာဘာသာနဲ့ အသုံးပြုရပါမယ်
 </div>
-    <a href="#" class="btn btn-primary">Download apk</a>
+
+    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom" aria-controls="offcanvasBottom">Toggle bottom offcanvas</button>
+<div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom" aria-labelledby="offcanvasBottomLabel">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="offcanvasBottomLabel">အဆင်ပြေတဲ့ လင့် ဒေါင်းယူရန်</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body small">
+    <a href="#" class="btn btn-primary">Mediafire လင့်နဲ့ ဒေါင်းရန်</a>
+<a href="#" class="btn btn-primary">တိုက်ရိုက်လင့် ဒေါင်းရန်</a>
+  </div>
+
+</div>
   </div>
 </div>
 </div>
@@ -40,10 +52,44 @@
     <div class="alert alert-info" role="alert">
     English ဘာသာနဲ့ အသုံးပြုရပါမယ်
 </div>
-    <a href="#" class="btn btn-primary">Download apk</a>
+
+    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom" aria-controls="offcanvasBottom">Toggle bottom offcanvas</button>
+<div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom" aria-labelledby="offcanvasBottomLabel">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="offcanvasBottomLabel">အဆင်ပြေတဲ့ လင့် ဒေါင်းယူရန်</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body small">
+    <a href="#" class="btn btn-primary">Mediafire လင့်နဲ့ ဒေါင်းရန်</a>
+<a href="#" class="btn btn-primary">တိုက်ရိုက်လင့် ဒေါင်းရန်</a>
+  </div>
+
   </div>
 </div>
 </div>
+
+<div class="accordion accordion-flush" id="accordionFlushExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+        Dtac ဆင်းမ် သုံးရင် ဖတ်ရန်
+      </button>
+    </h2>
+    <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+        Trueဆင်းမ် သုံးရင် ဖတ်ရန်
+      </button>
+    </h2>
+    <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+    </div>
+  </div>
+  
 
 </div>
 
