--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <p>မင်္ဂလာပါဗျာ အင်တာနက်ဖရီး သုံးဖို့အတွက် အောက်ပါ ကြိုက်ရာ Apk တစ်ခုအား ဒေါင်းယူပါ။ </p>
   <hr>
   <p class="mb-0">VIP အကောင့် တစ်လ 50ဘတ်နဲ့ ဝယ်ယူအသုံးပြုနိုင်ပါတယ်။ </p>
-     
+</div>
+
 <div class="accordion accordion-flush" id="accordionFlushExample">
   <div class="accordion-item">
     <h2 class="accordion-header">
@@ -36,7 +37,6 @@
     </div>
   </div>
 
-</div>
 
 <div style="margin: 0.5%; margin-left: 20px; margin-right: 20px;" >
  <img style="width: 100px; height: 100px;" src="https://raw.githubusercontent.com/sansoe2022/sksvpn/main/dreamvpn_ic.png" class="img-thumbnail" alt="...">
@@ -57,7 +57,7 @@
   </div>
   <div class="offcanvas-body small">
     <a href="#" class="btn btn-primary">Mediafire လင့်နဲ့ ဒေါင်းရန်</a>
-<a href="#" class="btn btn-primary">တိုက်ရိုက်လင့် ဒေါင်းရန်</a>
+<a href="#" style="margin-top: 20px;" class="btn btn-primary">တိုက်ရိုက်လင့် ဒေါင်းရန်</a>
   </div>
 
 </div>
@@ -84,7 +84,7 @@
   </div>
   <div class="offcanvas-body small">
     <a href="#" class="btn btn-primary">Mediafire လင့်နဲ့ ဒေါင်းရန်</a>
-<a href="#" class="btn btn-primary">တိုက်ရိုက်လင့် ဒေါင်းရန်</a>
+<a href="#" style="margin-top: 20px;" class="btn btn-primary">တိုက်ရိုက်လင့် ဒေါင်းရန်</a>
   </div>
 
   </div>
