--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
   </head>
   <body>
 <div style="text-size: 10px;">
-     <div class="alert alert-success" role="alert">
-  <h4 class="alert-heading">ကြိုဆိုပါ၏ </h4>
-  <p>မင်္ဂလာပါဗျာ အင်တာနက်ဖရီး သုံးဖို့အတွက် အောက်ပါ ကြိုက်ရာ Apk တစ်ခုအား ဒေါင်းယူပါ။ </p>
-  <hr>
-  <p class="mb-0">VIP အကောင့် တစ်လ 50ဘတ်နဲ့ ဝယ်ယူအသုံးပြုနိုင်ပါတယ်။ </p>
-</div>
+
 
 <div class="accordion accordion-flush" id="accordionFlushExample">
   <div class="accordion-item">
@@ -36,6 +31,14 @@
       <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
     </div>
   </div>
+
+
+     <div style="margin-left: 20px; margin-right: 20px;" class="alert alert-success" role="alert">
+  <h4 class="alert-heading">ကြိုဆိုပါ၏ </h4>
+  <p>မင်္ဂလာပါဗျာ အင်တာနက်ဖရီး သုံးဖို့အတွက် အောက်ပါ ကြိုက်ရာ Apk တစ်ခုအား ဒေါင်းယူပါ။ </p>
+  <hr>
+  <p class="mb-0">VIP အကောင့် တစ်လ 50ဘတ်နဲ့ ဝယ်ယူအသုံးပြုနိုင်ပါတယ်။ </p>
+</div>
 
 
 <div style="margin: 0.5%; margin-left: 20px; margin-right: 20px;" >
@@ -91,44 +94,7 @@
 </div>
 </div>
 
-<div id="carouselExampleDark" class="carousel carousel-dark slide">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active" data-bs-interval="10000">
-      <img src="..." class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item" data-bs-interval="2000">
-      <img src="..." class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Some representative placeholder content for the second slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
-      </div>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
+
   
 
 </div>
