--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div style="text-size: 10px; margin-bottom: 20px;">
 
 
-<div style="margin-bottom: 20px;" class="accordion accordion-flush" id="accordionFlushExample">
+<div class="accordion accordion-flush" id="accordionFlushExample">
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -33,7 +33,7 @@
   </div>
 
 
-     <div style="margin-left: 20px; margin-right: 20px;" class="alert alert-success" role="alert">
+     <div style="margin-top: 20px; margin-left: 20px; margin-right: 20px;" class="alert alert-success" role="alert">
   <h4 class="alert-heading">ကြိုဆိုပါ၏ </h4>
   <p>မင်္ဂလာပါဗျာ အင်တာနက်ဖရီး သုံးဖို့အတွက် အောက်ပါ ကြိုက်ရာ Apk တစ်ခုအား ဒေါင်းယူပါ။ </p>
   <hr>
