--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </button>
     </h2>
     <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-      <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+      <div class="accordion-body">Dtacက ဖုန်းဘေ 0နဲ့ သုံးရပါမယ် ဖုန်းဘေထည့်စရာမလိုပဲ သုံးရပါမယ် ဖုန်းဘေထည့်ထားရင် အင်တာနက်ဖွင့်ရင် ဖုန်းဘေဖြတ်ပါတယ် တကယ်လို့ တခါတလေ ချိတ်လို့မရရင်<code>လေယဥ်ပျံ (Airplane mode) ဖွင့်ပိတ် ကစားပေးပါ</code></div>
     </div>
   </div>
   <div class="accordion-item">
@@ -28,7 +28,7 @@
       </button>
     </h2>
     <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-      <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+      <div class="accordion-body">Trueဆင်းမ်က ဖုန်းဘေ ထည့်ထားပြီး သုံးလည်းရပါတယ် တကယ်လို့ ချိတ်ဆက်မရတာရှိရင် <code>*935*99# ဖရီးနှိပ်ပါ မရသေးရင် လေယဥ်ပျံ (Airplane mode) ဖွင့်ပိတ်ကစားပါ မရသေးရင် ဖုန်းဘေ 10ဘတ် ထည့်ပေးလိုက်ပါ။</code></div>
     </div>
   </div>
 
