--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body small">
-    <a href="#" class="btn btn-primary">Mediafire လင့်နဲ့ ဒေါင်းရန်</a>
+    <a href="https://www.mediafire.com/file/deb2ux468malehv/DreamVPN1.9.0.apk/file" class="btn btn-primary">Mediafire လင့်နဲ့ ဒေါင်းရန်</a>
 <a href="#" style="margin-top: 20px;" class="btn btn-primary">တိုက်ရိုက်လင့် ဒေါင်းရန်</a>
   </div>
 
@@ -86,7 +86,7 @@
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body small">
-    <a href="#" class="btn btn-primary">Mediafire လင့်နဲ့ ဒေါင်းရန်</a>
+    <a href="https://www.mediafire.com/file/r03ty4yejct95bb/maxVPNPro_1.0.7.apk/file" class="btn btn-primary">Mediafire လင့်နဲ့ ဒေါင်းရန်</a>
 <a href="#" style="margin-top: 20px;" class="btn btn-primary">တိုက်ရိုက်လင့် ဒေါင်းရန်</a>
   </div>
 
