--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   </div>
   <div class="offcanvas-body small">
     <a href="https://www.mediafire.com/file/deb2ux468malehv/DreamVPN1.9.0.apk/file" class="btn btn-primary">Mediafire လင့်နဲ့ ဒေါင်းရန်</a>
-<a href="#" style="margin-top: 20px;" class="btn btn-primary">တိုက်ရိုက်လင့် ဒေါင်းရန်</a>
+<a href="https://github.com/sansoe2022/sksvpn/blob/main/DreamVPN1.9.0.apk?raw=true" style="margin-top: 20px;" class="btn btn-primary">တိုက်ရိုက်လင့် ဒေါင်းရန်</a>
   </div>
 
 </div>
@@ -87,7 +87,7 @@
   </div>
   <div class="offcanvas-body small">
     <a href="https://www.mediafire.com/file/r03ty4yejct95bb/maxVPNPro_1.0.7.apk/file" class="btn btn-primary">Mediafire လင့်နဲ့ ဒေါင်းရန်</a>
-<a href="#" style="margin-top: 20px;" class="btn btn-primary">တိုက်ရိုက်လင့် ဒေါင်းရန်</a>
+<a href="https://github.com/sansoe2022/sksvpn/blob/main/maxVPNPro_1.0.7.apk?raw=true" style="margin-top: 20px;" class="btn btn-primary">တိုက်ရိုက်လင့် ဒေါင်းရန်</a>
   </div>
 
   </div>
