--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
   မြန်မာဘာသာနဲ့ အသုံးပြုရပါမယ်
 </div>
 
-    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom" aria-controls="offcanvasBottom">Download apk</button>
+    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">Download apk</button>
 <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
   <div class="offcanvas-header">
-    <h5 class="offcanvas-title" id="offcanvasBottomLabel">အဆင်ပြေတဲ့ လင့် ဒေါင်းယူရန်</h5>
+    <h5 class="offcanvas-title" id="offcanvasTopLabel">အဆင်ပြေတဲ့ လင့် ဒေါင်းယူရန်</h5>
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body small">
