--- a/index.html
+++ b/index.html
@@ -94,7 +94,16 @@
 </div>
 </div>
 
-
+<div style="margin-top: 50px; margin-left: 20px; margin-right: 20px;" >
+ <img style="width: 100px; height: 100px;" src="https://raw.githubusercontent.com/sansoe2022/sksvpn/main/maxvpn_ic.png" class="img-thumbnail" alt="...">
+ <div class="card">
+  <h5 class="card-header">MaxVPN Pro</h5>
+  <div class="card-body">
+    <h5 class="card-title">FREE ဖိုင်ရော VIPဖိုင်ရော ပါဝင်</h5>
+    <p class="card-text">တစ်လ 50ဘတ် ဖြင့် အင်တာနက်ဖရီး သုံးနိုင်သော ဆော့ဝဲလ်ပါ။ ဒေါင်းယူရန် အောက်က Download apk ခလုတ်ကို နှိပ်ပါ</p>
+    <div class="alert alert-info" role="alert">
+    English ဘာသာနဲ့ အသုံးပြုရပါမယ်
+</div>
   
 
 </div>
