--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     English ဘာသာနဲ့ အသုံးပြုရပါမယ်
 </div>
   <a href="https://play.google.com/store/apps/details?id=saw.vpnpro.co" class="btn btn-primary">Mediafire လင့်နဲ့ ဒေါင်းရန်</a>
-
+</div>
 </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
