--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
 <!-- social img -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css">
   
-  <link rel="stylesheet" href="dist/css/style.css" integrity="sha512-rc5rFtYRtqDeWsMyzhCvhi9VtOLRdvrosl++kkSTtJz6l7OJGV7UagR351UHjzcSCb3LVZxsEORzubIR9pYY4A==" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="stylesheet" href="css/style.css" integrity="sha512-rc5rFtYRtqDeWsMyzhCvhi9VtOLRdvrosl++kkSTtJz6l7OJGV7UagR351UHjzcSCb3LVZxsEORzubIR9pYY4A==" crossorigin="anonymous" referrerpolicy="no-referrer">
 
 <script src="assets/js/color-modes.js" integrity="sha384-U85iPmTbEjLHSm1VdKEcdkW8/3z/aNGvxL7WqYLhPc4HIQp7j50Zj5BkEngJ2lPe" crossorigin="anonymous"></script>     
 <link rel="stylesheet" href="dist/css/tak.min.css" integrity="sha384-3Rs2NY4zBqt1cDksBSg4kjIEzSlKwalCXoOnQHGtfRmQafKLptK5AaD7/KKY8Srp" crossorigin="anonymous">
