--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <h4 class="alert-heading">ကြိုဆိုပါ၏ </h4>
   <p>မင်္ဂလာပါဗျာ အင်တာနက်ဖရီး သုံးဖို့အတွက် အောက်ပါ ကြိုက်ရာ Apk တစ်ခုအား ဒေါင်းယူပါ။ </p>
   <hr>
-  <p class="mb-0">VIP အကောင့် တစ်လ 50ဘတ်နဲ့ ဝယ်ယူအသုံးပြုနိုင်ပါတယ်။ </p>
+  <p class="mb-0">VIP အကောင့် SG 🇸🇬 တစ်လ 60ဘတ် TH 🇹🇭 တစ်လ 50ဘတ် နဲ့ ဝယ်ယူအသုံးပြုနိုင်ပါတယ်။ </p>
 </div>
 
 
@@ -47,7 +47,7 @@
   <h5 class="card-header">DreamVPN</h5>
   <div class="card-body">
     <h5 class="card-title">VIP ဆာဗာ သီးသန့်</h5>
-    <p class="card-text">တစ်လ 50ဘတ် ဖြင့် အင်တာနက်ဖရီး သုံးနိုင်သော ဆော့ဝဲလ်ပါ။ ဒေါင်းယူရန် အောက်က Download apkခလုတ်ကို နှိပ်ပါ။</p>
+    <p class="card-text"> SG 🇸🇬 တစ်လ 60ဘတ် TH 🇹🇭 တစ်လ 50ဘတ် ဖြင့် အင်တာနက်ဖရီး သုံးနိုင်သော ဆော့ဝဲလ်ပါ။ ဒေါင်းယူရန် အောက်က Download apkခလုတ်ကို နှိပ်ပါ။</p>
     <div class="alert alert-info" role="alert">
   မြန်မာဘာသာနဲ့ အသုံးပြုရပါမယ်
 </div>
@@ -74,7 +74,7 @@
   <h5 class="card-header">MaxVPN Pro</h5>
   <div class="card-body">
     <h5 class="card-title">VIP ဆာဗာ သီးသန့်</h5>
-    <p class="card-text">တစ်လ 50ဘတ် ဖြင့် အင်တာနက်ဖရီး သုံးနိုင်သော ဆော့ဝဲလ်ပါ။ ဒေါင်းယူရန် အောက်က Download apk ခလုတ်ကို နှိပ်ပါ</p>
+    <p class="card-text">SG 🇸🇬 တစ်လ 60ဘတ် TH 🇹🇭 တစ်လ 50ဘတ် ဖြင့် အင်တာနက်ဖရီး သုံးနိုင်သော ဆော့ဝဲလ်ပါ။ ဒေါင်းယူရန် အောက်က Download apk ခလုတ်ကို နှိပ်ပါ</p>
     <div class="alert alert-info" role="alert">
     English ဘာသာနဲ့ အသုံးပြုရပါမယ်
 </div>
@@ -98,7 +98,7 @@
   <h5 class="card-header">SVPN Connect</h5>
   <div class="card-body">
     <h5 class="card-title">FREE ဖိုင်ရော VIPဖိုင်ရော ပါဝင်</h5>
-    <p class="card-text">တစ်လ 50ဘတ် ဖြင့် အင်တာနက်ဖရီး သုံးနိုင်သော ဆော့ဝဲလ်ပါ။ ဒေါင်းယူရန် အောက်က ခလုတ်ကို နှိပ်ပါ</p>
+    <p class="card-text">SG 🇸🇬 တစ်လ 60ဘတ် TH 🇹🇭 တစ်လ 50ဘတ် ဖြင့် အင်တာနက်ဖရီး သုံးနိုင်သော ဆော့ဝဲလ်ပါ။ ဒေါင်းယူရန် အောက်က ခလုတ်ကို နှိပ်ပါ</p>
     <div class="alert alert-info" role="alert">
     English ဘာသာနဲ့ အသုံးပြုရပါမယ်
 </div>
