--- a/index.html
+++ b/index.html
@@ -106,7 +106,21 @@
 </div>
 </div>
   
+  </div onclick="this.show()>
+  <a class="btn btn-primary"> Show hide button</a>
+</div>
 
+</div onclick="this.hide()>
+  <a class="btn btn-primary"> Hide button </a>
+</div>
+
+    Element.prototype.hide = function() {
+    this.style.display = 'none';
+}
+Element.prototype.show = function() {
+    this.style.display = '';
+}
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
   </body>
 </html>
