--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ btn.style.display = 'none';
  <button class="btn btn-primary" href="#">Download image</button>
 </p>
 
-<span id="text1">If click upload screen will show download button😁</span>
+<p id="text1">If click upload screen will show download button😁</p>
 </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
