--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ btn.style.display = 'none';
 </script>
 
 
-<div>
+<div style="margin-top: 20px;>
 <button href="#" onclick="showStuff('showBt', 'text1', this); return false;">Upload screen</button>
 <p id="showBt" style="display: none;">
  <button class="btn btn-primary" href="#">Download image</button>
