--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@ btn.style.display = 'none';
 </script>
 
 
-<div style="margin-top: 20px;>
-<button href="#" onclick="showStuff('showBt', 'text1', this); return false;">Upload screen</button>
+<div>
+<button style="margin-top: 20px; href="#" onclick="showStuff('showBt', 'text1', this); return false;">Upload screen</button>
 <p id="showBt" style="display: none;">
  <button class="btn btn-primary" href="#">Download image</button>
 </p>
