--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ btn.style.display = 'none';
 <div>
 <button style="margin-top: 20px; href="#" onclick="showStuff('showBt', 'text1', this); return false;">Upload screen</button>
 <p id="showBt" style="display: none;">
- <button class="btn btn-primary" href="#">Download image</button>
+ <button style="margin-top: 20px; class="btn btn-primary" href="#">Download image</button>
 </p>
 
 <p id="text1">If click upload screen will show download button😁</p>
