--- a/show.html
+++ b/show.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html>
+
+<!doctype html>
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,7 +18,7 @@
 	<label class="btn btn-primary" for="imageLoader"><br><img src="https://cdn-icons-png.flaticon.com/128/685/685686.png" width="38px" alt="Add"><div id="name">Upload image</div></label>	
 	<input type="file" id="imageLoader" name="imageLoader"/>
 	<canvas id="imageCanvas"></canvas>
-	<center><div id="img_div"></div></center>
+	<center><div id="img_div" onclick="showStuff('showBt', 'text1', this); return true;"></div></center>
 	<script type="text/javascript">
 		/* Know how you can contribute to the code: Simply go to the Github project's issue. */
 		var imageLoader = document.getElementById("imageLoader");
@@ -31,14 +31,14 @@
         	var img = new Image();
           	img.crossOrigin = "*";
           	img.onload = function() {
-            canvas.width = 900;
-            canvas.height = 1280;
-            ctx.drawImage(img, 200, 200, 900, 1280);
+            canvas.width = 1840;
+            canvas.height = 3600;
+            ctx.drawImage(img, 200, 200, 1440, 3200);
 			
             var wm = new Image();
             wm.crossOrigin = "*";
             wm.onload = function() {
-              ctx.drawImage(this, 0, 0, 900, 1280);
+              ctx.drawImage(this, 0, 0, 1840, 3600);
               var base64 = canvas.toDataURL("image/png");
               var fileToSave = new Image();
               fileToSave.onload = function() {
@@ -47,7 +47,7 @@
               fileToSave.src = base64;
             };
             wm.src =
-              "https://raw.githubusercontent.com/sansoe2022/sksvpn/main/20230923_105126.png";
+              "../devices/bezelless_wgray.png";
           };
           img.src = event.target.result;
         };
@@ -70,6 +70,18 @@ document.getElementById('download').addEventListener('click', function(e) {
 	}
 	</script>
 	<br>
-	<button class="btn btn-outline-primary" for="imageCanvas" id="download"><i class="fa fa-download"></i> Download image</button>
-	</body>
-  </html>
+
+	<p id="showBt" style="display: none;">
+	<button class="btn btn-outline-primary" for="img_div" id="download"><i class="fa fa-download"></i> Download image</button>
+
+	<script type="text/javascript">
+  function showStuff(id) {
+    document.getElementById(id).style.display='block';
+  }
+
+  function hideStuff(id) {
+    document.getElementById(id).style.display='none';
+  }
+</script>
+</body>
+</html>
