--- a/show.html
+++ b/show.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
 <link href="https://fonts.googleapis.com/css?family=Roboto|Noto+Sans+SC&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="/style.css" integrity="sha256-TJTrfD6xO+0aZj/AfPGsFybv8fQqfmeVpjgw1Jg+8uQ=" crossorigin="anonymous">
+<link rel="stylesheet" href="https://dmo.asia/style.css" integrity="sha256-TJTrfD6xO+0aZj/AfPGsFybv8fQqfmeVpjgw1Jg+8uQ=" crossorigin="anonymous">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <!-- Add icon library -->
