--- a/show.html
+++ b/show.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <head>
 <meta charset="utf-8">
@@ -18,7 +17,7 @@
 	<label class="btn btn-primary" for="imageLoader"><br><img src="https://cdn-icons-png.flaticon.com/128/685/685686.png" width="38px" alt="Add"><div id="name">Upload image</div></label>	
 	<input type="file" id="imageLoader" name="imageLoader"/>
 	<canvas id="imageCanvas"></canvas>
-	<center><div id="img_div"></div></center>
+	<center><div id="img_div" onclick="showStuff('showBt', 'text1', this); return true;"></div></center>
 	<script type="text/javascript">
 		/* Know how you can contribute to the code: Simply go to the Github project's issue. */
 		var imageLoader = document.getElementById("imageLoader");
@@ -29,9 +28,6 @@
         var reader = new FileReader();
         reader.onload = function(event) {
         	var img = new Image();
-
-showStuff('showBt', 'text1', this); return true;
-		
           	img.crossOrigin = "*";
           	img.onload = function() {
             canvas.width = 1840;
@@ -50,7 +46,7 @@ showStuff('showBt', 'text1', this); return true;
               fileToSave.src = base64;
             };
             wm.src =
-              "../devices/bezelless_wgray.png";
+              "https://dmo.asia/devices/bezelless_wgray.png";
           };
           img.src = event.target.result;
         };
@@ -74,7 +70,7 @@ document.getElementById('download').addEventListener('click', function(e) {
 	</script>
 	<br>
 
-	<p id="showBt" style="display: none;">
+	<p id="showBt" style="display: non;">
 	<button class="btn btn-outline-primary" for="img_div" id="download"><i class="fa fa-download"></i> Download image</button>
 
 	<script type="text/javascript">
