--- a/show.html
+++ b/show.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<html>
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -70,7 +71,7 @@ document.getElementById('download').addEventListener('click', function(e) {
 	</script>
 	<br>
 
-	<p id="showBt" style="display: non;">
+	<p id="showBt" style="display: none;">
 	<button class="btn btn-outline-primary" for="img_div" id="download"><i class="fa fa-download"></i> Download image</button>
 
 	<script type="text/javascript">
