--- a/show.html
+++ b/show.html
@@ -13,9 +13,12 @@
 <title>DMO</title>
 </head>
 <body>
-    <p></p>
-<center>	
-	<label class="btn btn-primary" for="imageLoader"><br><img src="https://cdn-icons-png.flaticon.com/128/685/685686.png" width="38px" alt="Add"><div id="name">Upload image</div></label>	
+    <p>Welcome to DMO, let's start</p>	
+	
+	<label for="imageLoader">
+	<img src="https://cdn-icons-png.flaticon.com/128/685/685686.png" width="1840px" height="3600" alt="Add">
+	<div id="name">Put your image</div>
+	</label>	
 	<input type="file" id="imageLoader" name="imageLoader"/>
 	<canvas id="imageCanvas"></canvas>
 	<center><div id="img_div"></div></center>
