--- a/show.html
+++ b/show.html
@@ -16,7 +16,7 @@
     <p>Welcome to DMO, let's start</p>	
 	
 	<label for="imageLoader">
-	<img src="https://dmo.asia/devices/bezelless_wgray.png" width="300px" height="800px" alt="Add">
+	<img src="https://dmo.asia/devices/bezelless_wgray.png" width="100px" height="auto" alt="Add">
 	<div id="name">Put your image</div>
 	</label>	
 	<input type="file" id="imageLoader" name="imageLoader"/>
