--- a/show.html
+++ b/show.html
@@ -13,16 +13,16 @@
 <title>DMO</title>
 </head>
 <body>
-    <p>Welcome to DMO, let's start</p>	
+    <p style="margin: 20px;">Welcome to DMO, let's start</p>	
 	
 	<center>
 	<label for="imageLoader">
 	<img src="https://dmo.asia/devices/bezelless_wgray.png" width="200px" height="auto" alt="Add">
-	<div id="name">Put your image</div>
-	</label>	
-	<input type="file" id="imageLoader" name="imageLoader"/>
+	<span>Put your image</span>
+	</label>
 	<canvas id="imageCanvas"></canvas>
-	<center><div id="img_div" for="imageLoader"></div></center>
+//	<center><div id="img_div"></div></center>
+		
 	<p id="showBt" style="display: none;">
 	<button class="btn btn-outline-primary" for="img_div" id="download"><i class="fa fa-download"></i> Download image</button>
 	</p>
