--- a/show.html
+++ b/show.html
@@ -17,11 +17,11 @@
 	
 	<center>
 	<label for="imageLoader">
-	<img src="https://dmo.asia/devices/bezelless_wgray.png" width="200px" height="auto" alt="Add">
+	<img src="https://dmo.asia/devices/bezelless_wgray.png" width="180px" height="auto" alt="Add">
 	<span>Put your image</span>
 	</label>
 	<canvas id="imageCanvas"></canvas>
-//	<center><div id="img_div"></div></center>
+	<center><div id="img_div"></div></center>
 		
 	<p id="showBt" style="display: none;">
 	<button class="btn btn-outline-primary" for="img_div" id="download"><i class="fa fa-download"></i> Download image</button>
