--- a/show.html
+++ b/show.html
@@ -19,6 +19,7 @@
 	<label for="imageLoader">
 	<img src="https://dmo.asia/devices/bezelless_wgray.png" width="180px" height="auto" alt="Add">
 	<span>Put your image</span>
+	<input type="file" id="imageLoader" name="imageLoader"/>
 	</label>
 	<canvas id="imageCanvas"></canvas>
 	<center><div id="img_div"></div></center>
