--- a/show.html
+++ b/show.html
@@ -21,8 +21,8 @@
 	<span>Put your image</span>
 	<input type="file" id="imageLoader" name="imageLoader"/>
 	</label>
-	<canvas id="imageCanvas"></canvas>
-	<center><div id="img_div"></div></center>
+	<canvas for="imageLoader" id="imageCanvas"></canvas>
+	<center for="imageLoader"><div id="img_div"></div></center>
 		
 	<p id="showBt" style="display: none;">
 	<button class="btn btn-outline-primary" for="img_div" id="download"><i class="fa fa-download"></i> Download image</button>
